--- a/requirements.txt
+++ b/requirements.txt
@@ -36,8 +36,6 @@ httpcore==1.0.7
 httplib2==0.22.0
 httpx==0.28.1
 idna==3.10
-instructor==1.7.2
-jinja2==3.1.5
 jiter==0.8.2
 jsonref==1.1.0
 levenshtein==0.26.1
@@ -46,8 +44,6 @@ markdown-it-py==3.0.0
 markupsafe==3.0.2
 mdurl==0.1.2
 multidict==6.1.0
-numpy==2.2.1
-openai==1.59.7
 packaging==24.2
 pdf2image==1.17.0
 pillow==11.1.0
@@ -71,7 +67,7 @@ shapely==2.0.6
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
-tenacity==9.0.0
+sycamore-ai==0.1.32
 tqdm==4.67.1
 typer==0.15.1
 typing-extensions==4.12.2
