--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,8 +38,6 @@ dependencies = [
     "grpc-google-iam-v1==0.14.0",
     "grpcio==1.69.0",
     "grpcio-status==1.69.0",
-    "h11==0.14.0",
-    "httpcore==1.0.7",
     "httplib2==0.22.0",
     "httpx==0.28.1",
     "idna==3.10",
@@ -74,7 +72,7 @@ dependencies = [
     "shellingham==1.5.4",
     "six==1.17.0",
     "sniffio==1.3.1",
-    "sycamore-ai==0.1.32",
+    "sycamore-ai",
     "tqdm==4.67.1",
     "typer==0.15.1",
     "typing-extensions==4.12.2",
@@ -82,3 +80,6 @@ dependencies = [
     "urllib3==2.3.0",
     "yarl==1.18.3",
 ]
+
+[tool.uv.sources]
+sycamore-ai = { path = "../sycamore/lib/sycamore/", editable = true }
